--- a/deployment-angular-app.yaml
+++ b/deployment-angular-app.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: angular-app
-          image: marwenhm/foyer-front:v-9
+          image: mehdihammami244/pfefrontend
           ports:
             - containerPort: 80
           volumeMounts:
