--- a/deployment-tp-foyer.yaml
+++ b/deployment-tp-foyer.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: tp-foyer
-          image: mehdihammami244/pfebackend
+          image: mehdihammami244/pfe-backend:latest
           ports:
             - containerPort: 8089
           envFrom:
