--- a/deployment-angular-app.yaml
+++ b/deployment-angular-app.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: angular-app
-          image: mehdihammami244/pfe-frontend:latest
+          image: mehdihammami244/pfe-frontend
           ports:
             - containerPort: 85
           volumeMounts:
